--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/173/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/173/index.mdx
@@ -3,22 +3,17 @@ slug: /173
 title: "React Hebdo #173: Million, Storybook, visionOS, Expo, Conform, Next.js, Remix, Astro, Apollo, useFormStatus, Framer Motion, Ariakit, Reanimated, TypeScript, JQuery, Express, Interop..."
 authors: [slorber]
 date: 02-07-2024
-unlisted: true
 ---
 
 Salut à tous !
 
-Hi everyone!
+Cette semaine, j'ai trouvé pas mal d'articles, mais aussi quelques releases intéressantes. Il semble que React soit constamment critiqué, mais globalement, les arguments sont toujours les mêmes et beaucoup d'entre eux semblent un peu dépassés, et ne reconnaissent pas souvent ce que React fait de mieux.
 
-This week we have many great React articles and a few interesting releases. It seems that React is constantly being criticized, but overall, the arguments are always the same and many of them seems a bit outdated, and never acknowledging what React does better than other solutions.
+Le monde React Native est excité par le lancement officiel de Vision Pro !
 
-The React Native world is taken over by the official launch of Vision Pro!
+Je teste quelque chose de nouveau cette semaine, avec un tout premier [thread Twitter dédié à React Native](https://twitter.com/bndkt/status/1755203992039424377). Dites-moi si vous aimez
 
-We are trying something new this week, with a very first [Twitter thread dedicated to React Native](https://twitter.com/bndkt/status/1755203992039424377). Let us know if you like it.
-
-The newsletter will be on a break next week. We'll be back the 21th of February 👋.
-
-I'd also like to ask you a small favor: can you reply to this e-mail with a simple "hello" or a comment? This helps increase our email deliverability. Thanks!
+La newsletter fera une pause la semaine prochaine. Retour le 21 février 👋.
 
 <!-- truncate -->
 
@@ -55,24 +50,24 @@ Trusted by corporate clients such as The Weather Channel, Deel.com, La Banque Po
 
 **[Million 3.0](https://million.dev/blog/million-3)**
 
-Million is an optimizing compiler for React. This new major version is a complete rewrite that fixes caveats of previous versions, handles more edge cases, brings a new optimized hydration system and improves stability.
+Million est un compilateur qui optimise React. Cette nouvelle version majeure est une réécriture complète qui corrige les problèmes versions précédentes, gère plus de edge cases, apporte un nouveau système d'hydratation optimisé et améliore la stabilité.
 
-It looks like Million is planning to help us debug and maintain great web performance over time. According to their 🐦 [launch trailer](https://twitter.com/aidenybai/status/1753456530652107072), a million linter is on the roadmap.
+Il semble que Million prévoit de nous aider à debugger et à maintenir de bonnes performances web au fil du temps. D'après leur 🐦 [trailer](https://twitter.com/aidenybai/status/1753456530652107072), un linter est prévu.
 
 ---
 
 - 💸 [Product for Engineers - PostHog's newsletter helping engineers build their product skills.](https://newsletter.posthog.com/?utm_source=twir&utm_campaign=twir)
-- 👀 [React Types PR - JSDoc comments](https://github.com/DefinitelyTyped/DefinitelyTyped/pull/68409): Matt Pocock is working on increasing our DX when using React with TypeScript.
-- 📜 [Avoid using React’s `useFormStatus`](https://allanlasser.com/posts/2024-01-26-avoid-using-reacts-useformstatus): An interesting article presenting shortcomings of this new React hook. It requires to be used under a `<form>` element, yet placing a submit `<button>` outside a form is perfectly valid HTML. Suggests using an async transition as an alternative.
-- 📜 [Direction-aware animations in Framer Motion](https://sinja.io/blog/direction-aware-animations-in-framer-motion): A pleasant interactive article showing how to animate list/details views and carousel slides in the correct direction for enter/exist animations.
-- 📜 [Open Sourcing the Remix Website](https://remix.run/blog/oss-remix-dot-run): The Remix team think there are more benefits than drawbacks to open-source their website. You can now study how their homepage scroll experience is implemented, or how they SSR their docs pages.
-- 📜 [Dockerizing a Next.js Application with GitHub Actions](https://mxd.codes/articles/ci-cd-for-nextjs-with-github-actions): Builds the default Dockerfile provided by Vercel with appropriate env variables, and publishes it to your container registry.
-- 📜 [Removing React is just weakness leaving your codebase](https://begin.com/blog/posts/2024-01-26-removing-react-is-just-weakness-leaving-your-codebase): Interesting criticism I can’t really agree with 😅 to me React doesn’t change that often, existing code doesn’t need to be rewritten and CSS-in-JS, well we know runtime-based libs are a problem for a while… And even React devs today rely more and more on web fundamentals than ever.
-- 📜 [It feels like React is getting a bit of a kicking recently](https://piccalil.li/blog/react-is-getting-a-bit-of-a-kicking-recently/): A more nuanced reply to the criticism above. React isn’t perfect, but isn’t going anywhere, and the web platform doesn’t currently give us all the tools we need.
-- 📜 [How to stream files from Next.js Route Handlers](https://www.ericburel.tech/blog/nextjs-stream-files): Shows how to serve dynamic/generated files without loading them in memory. You might need to convert Node.js streams to web streams.
-- 📜 [How to Detect Clicks Anywhere on a Page in React](https://spacejelly.dev/posts/how-to-detect-clicks-anywhere-on-a-page-in-react): TIL about the event.composedPath() API.
+- 👀 [React Types PR - JSDoc comments](https://github.com/DefinitelyTyped/DefinitelyTyped/pull/68409): Matt Pocock veut améliorer notre DX avec TypeScript via de la JSDoc.
+- 📜 [Avoid using React’s `useFormStatus`](https://allanlasser.com/posts/2024-01-26-avoid-using-reacts-useformstatus): article intéressant présentant les limites du hook `useFormStatus`. Il faut forcément l'utiliser sous un élément `<form>`, mais placer un bouton en dehors d'un form est parfaitement valide en réalité. Suggère une alternative utilisant `useTransition`.
+- 📜 [Direction-aware animations in Framer Motion](https://sinja.io/blog/direction-aware-animations-in-framer-motion): un article intéractif sympa qui explique comment animer les vues list/detail et les slides de carousel avec Framer Motion en animant les éléments dans la bonne direction.
+- 📜 [Open Sourcing the Remix Website](https://remix.run/blog/oss-remix-dot-run): Remix vient d'open sourcer son site, c'est l'occasion d'étudier comment ils ont implémenté l'experience scroll de leur landing page, ou encore comment ils SSR leur documentation.
+- 📜 [Dockerizing a Next.js Application with GitHub Actions](https://mxd.codes/articles/ci-cd-for-nextjs-with-github-actions): build le Dockerfile fourni par Vercel et le publie sur un registre via GitHub Actions.
+- 📜 [Removing React is just weakness leaving your codebase](https://begin.com/blog/posts/2024-01-26-removing-react-is-just-weakness-leaving-your-codebase): critique de React avec laquelle je suis difficilement d'accord 😅 pour moi React ne change pas tant que ça et il n'est pas souvent nécessaire de réécrire une app. Ok les libs CSS-in-JS avec runtime sont pas idéales mais bon c'est un problème connu et il y a des alternatives maintenant. Les devs React utilisent de plus en plus les fondamentaux du web.
+- 📜 [It feels like React is getting a bit of a kicking recently](https://piccalil.li/blog/react-is-getting-a-bit-of-a-kicking-recently/): une critique plus nuancée qui répond à l'article précédent. React n'est pas parfait mais ne vas pas disparaitre du jour au lendemain, tant que la plateforme web ne nous fourni pas les outils dont nous avons besoin en tout cas.
+- 📜 [How to stream files from Next.js Route Handlers](https://www.ericburel.tech/blog/nextjs-stream-files): explique comment servir des fichiers dynamiques/générés sans les charger en mémoire. Pour cela il faudra convertir les streams Node.js en web streams.
+- 📜 [How to Detect Clicks Anywhere on a Page in React](https://spacejelly.dev/posts/how-to-detect-clicks-anywhere-on-a-page-in-react): je découvre l'API `event.composedPath()`.
 - 📜 [How streaming helps build faster web applications](https://vercel.com/blog/how-streaming-helps-build-faster-web-applications)
-- 📜 [Lessons Learned from Developing DevCycle's Next.js SDK](https://blog.devcycle.com/feature-flagging-with-next-js-lessons-learned-from-developing-devcycles-sdk/): Their feature-flag SDK had to support Server/Client Components, streaming and Suspense.
+- 📜 [Lessons Learned from Developing DevCycle's Next.js SDK](https://blog.devcycle.com/feature-flagging-with-next-js-lessons-learned-from-developing-devcycles-sdk/): leur SDK de feature-flag doit supporter Server/Client Components, streaming et Suspense.
 - 📜 [How to generate responsive images on Remix with Unpic](https://unpic.pics/blog/responsive-images-on-remix/)
 - 📜 [Enhance Your React App's Scalability using Storybook and Chromatic](https://dainemawer.com/articles/enhance-your-react-apps-scalability-using-storybook-and-chromatic)
 - 📜 [Tale of a Refactor - Payment system](https://commerce.nearform.com/blog/2024/tale-of-a-refactor/)
@@ -118,38 +113,37 @@ Dive into Clerk's [quickstarts and tutorials](https://clerk.com/docs/quickstarts
 
 ## 📱 React-Native {#react-native}
 
-This section is now co-authored with [Benedikt](https://twitter.com/bndkt), and we also have a new [React Native thread on Twitter](https://twitter.com/bndkt/status/1755203992039424377)! Please let us know if you like it, and support us with a like or retweet 😍.
-
+Cette section est maintenant co-écrite avec [Benedikt](https://twitter.com/bndkt), et nous avons également un nouveau [thread React Native sur Twitter](https://twitter.com/bndkt/status/1755203992039424377) ! N'hésitez pas à nous faire savoir si vous l'appréciez, et à nous soutenir avec un like ou un retweet 😍.
 [![Announcing React Native for Apple Vision Pro](/emails/issues/173/visionos.jpg)](https://www.callstack.com/blog/announcing-react-native-for-apple-vision-pro)
 
 **[Announcing React Native for Apple Vision Pro](https://www.callstack.com/blog/announcing-react-native-for-apple-vision-pro)**
 
-Last week, Apple released their Apple Vision Pro, and at least parts of the React Native community are excited about a new platform for which they’ll be able to build experiences with their favorite framework. There are two different approaches (🐦 [side-by-side comparison](https://twitter.com/o_kwasniewski/status/1754520654219493408)) to bring React Native onto visionPro:
+La semaine dernière, Apple a sorti Vision Pro, et la communauté React Native est enthousiaste à l'idée d'une nouvelle plateforme pour laquelle elle pourra créer des apps avec son framework préféré. Il existe deux approches différentes (🐦 [comparaison côte à côte](https://twitter.com/o_kwasniewski/status/1754520654219493408)) pour utiliser React Native avec visionPro :
 
-- Similar to how you can run an iOS app on macOS you can check a box in App Store Connect and enable your app to run on visionOS “as is,” using compatibility mode. Check out how 🐦 [Evan Bacon provisions, builds, and installs an Expo app on visionPro in under 10 minutes](https://twitter.com/Baconbrix/status/1753927218697208102). Apps in compatibility mode don’t take advantage of the “spatial computing” capabilities of visionOS though, they’re merely an iPad screen shown in the room.
+- De manière similaire à la façon dont vous pouvez exécuter une application iOS sur macOS, vous pouvez cocher une case dans App Store Connect et permettre à votre application de fonctionner sur visionOS en l'état, en utilisant le mode compatibilité. Regardez comment 🐦 [Evan Bacon provisionne, build et installe une application Expo sur visionPro en moins de 10 minutes](https://twitter.com/Baconbrix/status/1753927218697208102). Les applications en mode compatibilité ne tirent cependant pas profit des capacités spatiales de visionOS, elles ne sont qu'un écran d'iPad affiché dans une pièce.
 
-- To build apps that are truly optimized for this new world, additional native capabilities need to be adapted. And that is exactly what this new visionOS platform is doing, driven by Oskar Kwaśniewski and brought to us by Callstack.
+- Pour créer des applications réellement optimisées pour ce nouveau monde, il faut adopter des capacités natives supplémentaires. C'est exactement ce que fait la nouvelle plateforme visionOS, développée par Oskar Kwaśniewski de chez Callstack.
 
-It’s early days, but it's super exciting to see RN embrace a new platform so quickly! The very first React Native visionOS app [Spacial Noise](https://apps.apple.com/us/app/spatial-noise/id6477335349) is already available on the App Store.
+Il est encore tôt, mais c'est très excitant de voir React Native adopter une nouvelle plateforme aussi rapidement ! La toute première application React Native visionOS [Spacial Noise](https://apps.apple.com/us/app/spatial-noise/id6477335349) est déjà disponible sur l'App Store.
 
 ---
 
 - 💸 [Moropo - Mobile Testing Infrastructure That Integrates Seamlessly With Expo EAS ](https://www.moropo.com?utm_source=newsletter&utm_medium=emails&utm_campaign=twir-20240207)
-- 👀 [RFC - React Native Frameworks](https://github.com/react-native-community/discussions-and-proposals/pull/759): Did you ever wonder where the boundary between React Native, Expo, and other community tools is? Lines are blurry, and this RFC aims to clarify things by introducing the concept of “React Native Frameworks.”
-- 👀 [CSS4 color functions](https://github.com/facebook/react-native/pull/42831) and [DisplayP3 color](https://github.com/facebook/react-native/pull/42830): More color options (e.g. Wide Gamut) coming to React Native.
+- 👀 [RFC - React Native Frameworks](https://github.com/react-native-community/discussions-and-proposals/pull/759): vous êtes-vous déjà demandé où se situe la frontière entre React Native, Expo et les autres outils de la communauté ? Les lignes sont floues, et cette RFC vise à clarifier les choses en introduisant le concept de "React Native Frameworks".
+- 👀 [CSS4 color functions](https://github.com/facebook/react-native/pull/42831) et [DisplayP3 color](https://github.com/facebook/react-native/pull/42830): plus d'options de couleurs (Wide Gamut) pour React Native.
 - 🐦 [Expo is dogfooding Expo web and Expo Router on their new blog](https://twitter.com/Baconbrix/status/1755026874047123843)
 - 🐦 [Shopify continues to bet on React Native](https://x.com/mustafa01ali/status/1753477532668600653?s=20)
-- 📖 [Expo Docs - Build Expo apps for TV](https://x.com/expo/status/1754208200935518292?s=20): “React Native everywhere” is becoming more true every day. Thanks to Expo config plugins, experimental support for Apple TV and Android TV is now directly available. This is a super exciting development, which I’m sure will continue with macOS, visionOS, …
-- 📖 [Improved Metro bundler docs from Expo](https://docs.expo.dev/guides/customizing-metro/): Explaining how bundle splitting, tree shaking, and minification work and and how Metro is now also used for the web.
-- 📜 [What every dev should know about using Environment Variables](https://expo.dev/blog/what-are-environment-variables): Handling environment variables in RN correctly is critical, as you otherwise run the risk of shipping (and therefore exposing) secrets to the client.
-- 📜 [Fingerprint your native runtime with @expo/fingerprint](https://expo.dev/blog/fingerprint-your-native-runtime): Determining whether an update to the JS bundle of a RN app requires a new native build is a tricky question. With SDK 50, Expo released Fingerprint, which basically creates a single hash value representing all the “native surface area” of a RN app and can then be used to trigger a new native build.
-- 📜 [6 reasons to use EAS Update](https://expo.dev/blog/6-reasons-to-use-eas-update): Did you know about the republish feature? I didn’t, before reading this article. In case of a messed up upgrade, you can quickly republish a previous (working) update!
+- 📖 [Expo Docs - Build Expo apps for TV](https://x.com/expo/status/1754208200935518292?s=20): "React Native everywhere" devient de plus en plus vrai chaque jour. Grâce aux Expo config plugins, le support expérimental de l'Apple TV et de l'Android TV est désormais disponible. Une nouvelle excitante, qui, j'en suis sûr, se poursuivra avec macOS, visionOS, ....
+- 📖 [Improved Metro bundler docs from Expo](https://docs.expo.dev/guides/customizing-metro/): Explication du fonctionnement du code splitting, tree shaking et de la minification sous Metro, ainsi que le support web.
+- 📜 [What every dev should know about using Environment Variables](https://expo.dev/blog/what-are-environment-variables):Il est essentiel de gérer correctement les variables d'environnement, faute de quoi vous risquez d'envoyer (et donc d'exposer) des secrets au client.
+- 📜 [Fingerprint your native runtime with @expo/fingerprint](https://expo.dev/blog/fingerprint-your-native-runtime): déterminer si une mise à jour du bundle JS d'une application RN nécessite un nouveau build natif est une question délicate. Avec le SDK 50, Expo a lancé Fingerprint, qui crée un hash unique représentant toute la "surface native" d'une app, et qui peut ensuite être utilisée pour déclencher une nouvelle compilation native.
+- 📜 [6 reasons to use EAS Update](https://expo.dev/blog/6-reasons-to-use-eas-update): je découvre la fonction republish, en cas de mise à jour ratée, vous pouvez rapidement republier une mise à jour précédente (qui fonctionne) !
 - 📜 [How to add a new target to your file with Expo config plugin?](https://www.reactnativecrossroads.com/posts/config-plugin-expo-add-target)
 - 📦 [React Native Storybook 7 - CSF 3, TypeScript, Markdown, Automatic story loading, Auto-generation for controls](https://storybook.js.org/blog/react-native-storybook-7/)
 - 📦 [React Native Test App 3.1 - Support for bridgeless mode](https://github.com/microsoft/react-native-test-app/releases/tag/3.1.0)
-- 🎥 [William Candillon - JavaScript Animations in 2024](https://www.youtube.com/watch?v=AHh3Bt7JpRs): The next version of Reanimated will support JavaScript generators. William rewrites 3 of his custom Reanimated animation examples to generators, using yields in a while (true) loop.
+- 🎥 [William Candillon - JavaScript Animations in 2024](https://www.youtube.com/watch?v=AHh3Bt7JpRs): La prochaine version de Reanimated supportera les générateurs JavaScript. William réécrit 3 de ses exemples d'animation Reanimated avec des générateurs, en utilisant des yields dans une boucle while (true).
 - 🎥 [Simon Grimm - The Time for React Native is Now](https://www.youtube.com/watch?v=COH_XhlMyZ4)
-- 🎙️ [RNR 287 - Special Guest - Charlie Cheever](https://reactnativeradio.com/episodes/rnr-287-special-guest-charlie-cheever): To me it was always clear that Expo was meant to be a layer on top of React Native. But did you know that Charlie Cheever and James Ide started working on Expo before React Native was even around?
+- 🎙️ [RNR 287 - Special Guest - Charlie Cheever](https://reactnativeradio.com/episodes/rnr-287-special-guest-charlie-cheever): pour moi, il a toujours été clair qu'Expo était destiné à être une couche au-dessus de React Native. Mais saviez-vous que Charlie Cheever et James Ide ont commencé à travailler sur Expo avant même que React Native n'existe ?
 - 🎙️ [Rocket Ship 28 - Expo Router & Universal React Native Apps with Evan Bacon](https://share.transistor.fm/s/e9f2b98e)
 - 🎙️ [The React Native Show 34 - Results of the State of React Native 2023 Survey](https://www.callstack.com/podcasts/state-of-react-native-2023)
 
