--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/174/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/174/index.mdx
@@ -32,12 +32,9 @@ import Support from "../_support.mdx";
 
 😴 Sleep peacefully knowing that Axiom’s zero-config observability for Vercel projects has you covered.
 
-*   Use Axiom's pre-built dashboard for an overview across all your Vercel logs and vitals, drill down to specific projects and deployments, and get insight on how functions are performing with a single click. 
-    
-*   [next-axiom](https://github.com/axiomhq/next-axiom) allows you to send logs and events from any part of your Next.js projects - client, edge, or server-side - without any special configuration.
-    
-*   Easily send structured logs directly from your code and analyze them together with Vercel logs.
-    
+- Use Axiom's pre-built dashboard for an overview across all your Vercel logs and vitals, drill down to specific projects and deployments, and get insight on how functions are performing with a single click.
+- [next-axiom](https://github.com/axiomhq/next-axiom) allows you to send logs and events from any part of your Next.js projects - client, edge, or server-side - without any special configuration.
+- Easily send structured logs directly from your code and analyze them together with Vercel logs.
 
 Axiom efficiently captures 100% of your event data so you’ll never have to worry about sampling or retention, and you’ll never have to guess what your users are experiencing.
 
@@ -63,20 +60,13 @@ Axiom efficiently captures 100% of your event data so you’ll never have to wor
 
 A complete form solution for React projects, used by Fortune 500 companies. With easy-to-use open-source components for building and running powerful forms inside your React app. Extensively documented, up in minutes, and deeply customizable.
 
-*   Builder for creating powerful forms;
-    
-*   Runner for deploying forms and collecting data;
-    
-*   Flexible form layouts (conversational, chat etc.) and styling;
-    
-*   Extensible with custom question types;
-    
-*   Complete docs, examples, and demos;
-    
-*   Self-hosted without external dependencies;
-    
-*   Start, test, and perfect for free.
-    
+- Builder for creating powerful forms;
+- Runner for deploying forms and collecting data;
+- Flexible form layouts (conversational, chat etc.) and styling;
+- Extensible with custom question types;
+- Complete docs, examples, and demos;
+- Self-hosted without external dependencies;
+- Start, test, and perfect for free.
 
 TWIR exclusive: [Get 25% off your FormBuilder SDK license](https://tripetto.com/sdk/this-week-in-react/?utm_source=thisweekinreact&utm_medium=sponsor&utm_campaign=sdk).
 
@@ -90,11 +80,15 @@ TWIR exclusive: [Get 25% off your FormBuilder SDK license](https://tripetto.com/
 
 ## 🇫🇷 En français {#fr}
 
-<Todo />
-
-💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
-
-<Todo />
+- 📜 [Le rendu statique personnalisé avec Next.js et le Megaparam](https://medium.com/point-js/le-rendu-statique-personnalis%C3%A9-avec-next-js-et-le-megaparam-b3724612194d)
+- 📜 [Implémente ton premier formulaire avec Remix (full typesafe, UX friendly)](https://algomax.fr/blog/implemente-ton-premier-formulaire-avec-remix-full-typesafe-ux-friendly)
+- 📜 [6 Routes à connaître si tu utilises Remix](https://algomax.fr/blog/les-6-routes-a-connaitre-avec-le-framework-remix-framework-react)
+- 📜 [Comment sécuriser ton application NextJS 14 ?](https://nowts.app/posts/2024-02-13_comment-securiser-application-nextjs)
+- 📜 [Pourquoi je choisis NextAuth plutôt que Clerk, Supabase ou Lucia ?](https://nowts.app/posts/2024-02-20_pourquoi-nextauth)
+- 🎥 [Remix v2.5: Mode SPA, SSG, support de Vite imminent !](https://www.youtube.com/watch?v=Ka6O3m_tsJk)
+- 🎙️ [Double Slash 82 - Les News Web Dev de Février 2024 - Remix SPA, jQuery 4, Million 3, Tempo…](https://double-slash.dev/podcasts/news-feb24/)
+- 📅 [Conférence React Paris - 22 Mars](https://react.paris/): nouvelle conférence, les speakers ont déjà été annoncés.
+- 📅 [React Connection - 22 Avril](https://reactconnection.io/) + [React-Native Connection - 23 Avril](https://reactnativeconnection.io/): 2 jours de conférence web et mobile. CFP est ouvert jusqu'au 3 février.
 
 ---
 
