--- a/website/newsletter/174/index.mdx
+++ b/website/newsletter/174/index.mdx
@@ -32,12 +32,9 @@ import Support from "../_support.mdx";
 
 😴 Sleep peacefully knowing that Axiom’s zero-config observability for Vercel projects has you covered.
 
-*   Use Axiom's pre-built dashboard for an overview across all your Vercel logs and vitals, drill down to specific projects and deployments, and get insight on how functions are performing with a single click. 
-    
-*   [next-axiom](https://github.com/axiomhq/next-axiom) allows you to send logs and events from any part of your Next.js projects - client, edge, or server-side - without any special configuration.
-    
-*   Easily send structured logs directly from your code and analyze them together with Vercel logs.
-    
+- Use Axiom's pre-built dashboard for an overview across all your Vercel logs and vitals, drill down to specific projects and deployments, and get insight on how functions are performing with a single click.
+- [next-axiom](https://github.com/axiomhq/next-axiom) allows you to send logs and events from any part of your Next.js projects - client, edge, or server-side - without any special configuration.
+- Easily send structured logs directly from your code and analyze them together with Vercel logs.
 
 Axiom efficiently captures 100% of your event data so you’ll never have to worry about sampling or retention, and you’ll never have to guess what your users are experiencing.
 
@@ -47,9 +44,66 @@ Axiom efficiently captures 100% of your event data so you’ll never have to wor
 
 ## ⚛️ React {#react}
 
-<Todo />
+[React Labs - What We've Been Working On – February 2024](https://react.dev/blog/2024/02/15/react-labs-what-we-have-been-working-on-february-2024)
+
+This week brought us the first official update from React Labs since almost exactly one year ago, and they dropped some exciting announcements. We already covered many of them here, but it’s good to have an official summary!
+
+React Forget is 🐦 [now just called React Compiler](https://twitter.com/en_JS/status/1758224340880158955) and it seems that the production 🐦 [Instagram rollout](https://twitter.com/sebastienlorber/status/1734607171030303186) has been successful.
+
+The next React release will be a major version. React 19 is around the corner, and there’s a certain [conference](https://conf.react.dev/) that would lend itself to such an announcement 😏. The release will also include built-in support for managing page metadata (built-in support for what React-Helmet did for us, with proper streaming support), Asset Loading (including Suspense integration) and Actions for sending data from client to server. The surface area that meta-frameworks like Next.js and Remix need to cover with proprietary implementations is shrinking.
+
+One of the most underrated upcoming React features, the Offscreen API (named as Activity), is temporarily deprioritized to focus on React 19. We’ll have to wait a bit more to fully leverage the concurrent model introduced by React 18.
+
+Overall, it’s an exciting time to be a React developer, and we look forward to the next major version!
+
+See also:
+
+- 🐦 [Andrew Clark’s tweet](https://twitter.com/acdlite/status/1758229889595977824) containing interesting extras I first hear about, such as React refs becoming normal props, or the ability to use `<Context>` instead of `<Context.Provider>`.
+- 🎥 [Theo Browne’s summary video - React 19 Is Here - Are You Ready?](https://www.youtube.com/watch?v=B-tjhF7ojeA)
+
+—
+
+[Remix 2.7 - Remix Vite is Now Stable](https://remix.run/blog/remix-vite-stable)
+
+An important release for Remix, stabilizing the Vite plugin and the SPA mode, proper support for Cloudflare Pages, introducing a preset system, and shipping many other useful improvements. An upcoming dedicated post will likely detail how the new SPA mode will help Vite + React Router apps transition to Remix without having to introduce a server runtime. If you are still using Create-React-App, it might be a good time to consider migrating to Vite!
+
+---
 
 - 💸 [React Component Analytics — Omlet Scans Your Codebase to Measure Component Usage to Increase Code Quality and Design Systems Adoption](https://omlet.dev/?utm_campaign=partner_this-week-in-react_newsletter-quick-link-feb-2024)
+- 🐦 [Next.js DevTools preview - visualize what gets pre-rendered, stream, caches, etc…](https://twitter.com/rauchg/status/1757402186060083272)
+- 👀 [React Docs PR - Add useFormStatus pitfall example](https://github.com/reactjs/react.dev/pull/6620): The new useFormStatus hook requires to be nested under a `<form>` component that acts like a provider. When that’s not possible, you can reimplement it thanks to startTransition
+  👀 [React PR - Move all client code to react-dom/client](https://github.com/facebook/react/pull/28271)
+- 📜 [HTML Streaming and DOM Diffing Algorithm](https://aralroca.com/blog/html-node-streaming): Present various contexts in which streaming can be used. Including a simplified example of how React Suspense works.
+- 📜 [React 19 Will Be Compiled](https://reacttraining.com/blog/react-19-will-be-compiled): Explains memoization and gives an interesting perspective on the “compilation spectrum” of frameworks. React 19 with a compiler will remain less compiled than Svelte.
+- 📜 [React, Solid, htmx - how far can they go?](https://bobaekang.com/blog/react-solid-htmx/): Interesting thoughts of different approaches to bridge the “network chasm”.
+- 📜 [What we've learned from the transition to Next.js 14 with Server Components](https://medusajs.com/blog/client-server-transition-learnings-nextjs-14-server-components/): Medusa e-commerce framework recently upgraded their Next.js starter template. Presents interesting side-by-side code comparisons. After getting used to the RSC model, it greatly simplifies your code.
+- 📜 [React Trends in 2024](https://www.robinwieruch.de/react-trends/): Robin Wieruch sharing his annual list of exciting React trends to follow.
+- 📜 [UI = f(statesⁿ)](https://daverupert.com/2024/02/ui-states/): Dave lists all the kind of states than can affect your UI. This formula strongly reminds React, but the post remains generic.
+- 📜 [How to do Incremental Static Regeneration and advanced caching with Remix](https://developers.netlify.com/guides/how-to-do-isr-and-advanced-caching-with-remix/)
+- 📜 [Global state with XState and React](https://stately.ai/blog/2024-02-12-xstate-react-global-state)
+- 📜 [What is Astro?](https://www.eddyvinck.com/blog/what-is-astro/)
+- 📜 [OpenTask - A Next.js App Router Case Study](https://flsilva.com/blog/opentask-nextjs-app-router-case-study/)
+- 📜 [Remix Takes on Next.js in Battle of the React Frameworks](https://thenewstack.io/remix-takes-on-next-js-in-battle-of-the-react-frameworks/)
+- 📜 [How to Build a Blog with Next.js App Router & Headless Hashnode](https://spacejelly.dev/posts/how-to-build-a-blog-with-next-js-app-router-headless-hashnode)
+- 📜 [Simplifying Form Rendering In React with Field Component Abstraction](https://claritydev.net/blog/abstract-react-form-fields-with-field-component)
+- 📜 [Password protecting routes in Next.js App Router](https://www.alexchantastic.com/password-protecting-next)
+- 📜 [Syntax Highlighting with Shiki, React Server Components, and Next.js](https://www.luckymedia.dev/blog/syntax-highlighting-with-shiki-react-server-components-and-next-js)
+- 📜 [Clean Architecture in React](https://alexkondov.com/full-stack-tao-clean-architecture-react/)
+- 📜 [How to optimize the DOM size in React JS?](https://scientyficworld.org/how-to-optimize-the-dom-size-in-react-js/)
+- 📦 [Hono 4.0 - Static Site Generation, client components, file-based routing](https://github.com/honojs/hono/releases/tag/v4.0.0): It’s super interesting to see the Hono web framework supporting client-side React-like hooks such as useState, moving in the opposite direction of React (from the server to the client). Hono is maintained by a Cloudflare dev, and I wouldn’t be surprised to see this company seriously enter the “frontend framework war”. And we are still 🐦 [waiting for Aviation](https://twitter.com/GregBrimble/status/1758007869759189036), another React RSC framework from a Cloudflare dev.
+- 📦 [Isograph 0.1.0:](https://isograph.dev/blog/2024/02/15/isograph-0.1.0/) New modern React GraphQL client coming from an ex-Meta Relay maintainer just reached alpha stage.
+- 📦 [SafeTest - A Novel Approach to Front End Testing](https://netflixtechblog.com/introducing-safetest-a-novel-approach-to-front-end-testing-37f9f88c152d): The Netflix team introduced a novel approach to frontend testing, combining React, Jest/Vitest and Playwright, and aiming to solve respective shortcomings of both Integration (RTL) and E2E tests at once.
+- 📦 [React Aria February 13, 2024 Release](https://react-spectrum.adobe.com/releases/2024-02-13.html): Introducing a new submenu feature in alpha (🐦 [demo](https://twitter.com/devongovett/status/1757540075636744236))
+- 📦 [Redwood 7.0 - Redwood Studio, GraphQL realtime, GraphQL fragments, Node 20, server entrypoint…](https://community.redwoodjs.com/t/redwood-v7-0-0-is-now-available/5777)
+- 📦 [Waku v0.19.3 introduces RSC hot reload support in development mode](https://github.com/dai-shi/waku/blob/main/CHANGELOG.md#0193---2024-02-14)
+- 📦 [Astro 4.4 - All about performance](https://astro.build/blog/astro-440/)
+- 📦 [Starlight 0.19 - Custom pages](https://starlight.astro.build/guides/pages/#custom-pages)
+- 📦 [react-print-pdf](https://github.com/OnedocLabs/react-print-pdf)
+- 📦 [Storybook’s Visual Tests addon enters beta](https://storybook.js.org/blog/visual-tests-addon-beta/)
+- 🎥 [Ben Holmes - React Suspense from scratch!](https://www.youtube.com/watch?v=cdOyOgwt9Zc)
+- 🎥 [Ryan Toronto - Out-of-order streaming in React](https://www.youtube.com/watch?v=23bHSDJD9y4)
+- 🎥 [Nadia Makarevich - Mastering React Reconciliation](https://www.youtube.com/watch?v=cyAbjx0mfKM)
+- 🎥 [Jack Herrington - Are Your React Components Too BIG?](https://www.youtube.com/watch?v=NsFmOttIW9Y)
 
 <SubscribeFormEmbed placement="middle" />
 
@@ -63,20 +117,13 @@ Axiom efficiently captures 100% of your event data so you’ll never have to wor
 
 A complete form solution for React projects, used by Fortune 500 companies. With easy-to-use open-source components for building and running powerful forms inside your React app. Extensively documented, up in minutes, and deeply customizable.
 
-*   Builder for creating powerful forms;
-    
-*   Runner for deploying forms and collecting data;
-    
-*   Flexible form layouts (conversational, chat etc.) and styling;
-    
-*   Extensible with custom question types;
-    
-*   Complete docs, examples, and demos;
-    
-*   Self-hosted without external dependencies;
-    
-*   Start, test, and perfect for free.
-    
+- Builder for creating powerful forms;
+- Runner for deploying forms and collecting data;
+- Flexible form layouts (conversational, chat etc.) and styling;
+- Extensible with custom question types;
+- Complete docs, examples, and demos;
+- Self-hosted without external dependencies;
+- Start, test, and perfect for free.
 
 TWIR exclusive: [Get 25% off your FormBuilder SDK license](https://tripetto.com/sdk/this-week-in-react/?utm_source=thisweekinreact&utm_medium=sponsor&utm_campaign=sdk).
 
@@ -84,7 +131,45 @@ TWIR exclusive: [Get 25% off your FormBuilder SDK license](https://tripetto.com/
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+This section is now co-authored with [Benedikt](https://twitter.com/bndkt). Feel free to send us your comments by email or on [Twitter](https://twitter.com/bndkt)!
+
+---
+
+Meta not only dropped some big news regarding React this week. Today, a brand new repo showed up on GitHub: [react-strict-dom](https://github.com/facebook/react-strict-dom). The readme describes it as an “experimental integration of React DOM and StyleX that aims to improve and standardize the development of styled React components for web and native.” It is based on the ideas from the [“React DOM for Native” RFC](https://github.com/react-native-community/discussions-and-proposals/pull/496) and in my opinion could be huge for how we think about universal app development in the future. Today, the most common approach for universal apps for RN ist React Native Web, which shims RN components and APIs on the web. And while RNW is really great, it often feels like shoehorning one platform into another. The premise of react-strict-dom is that there is a single DOM library which universally supports web, iOS, and Android (and potentially more platforms in the future). The element API is based on web, which is why you see the very HTML-like syntax in the screenshot above.
+
+As always, Dan Abramov is the best in expressing the idea in a concise [tweet](https://twitter.com/dan_abramov2/status/1760245165703184516): “Looks like a spiritual successor to RNW, but approached from the other direction (web APIs won, so RN is building support for a strict subset). Essentially, you’ll be able to render a `<div>` in RN.”
+
+There’s still a long way to go when you look at the current [compatibility status](https://github.com/facebook/react-strict-dom/blob/main/packages/react-strict-dom/COMPATIBILITY.md), but this is certainly an exciting milestone on a more universal React!
+
+---
+
+- 👀 [react-strict-dom](https://github.com/facebook/react-strict-dom): Brand new repo by meta, stated aim is to “standardize development of styled React components for web AND native.”
+- 👀 [Hermes PR - Add Support for ES2023 Array non-mutating methods](https://github.com/facebook/hermes/commit/b30f0e453d82594654810730211e092415aa6a3c): ES support in Hermes is improving. About Hermes, see also [this discussion](https://github.com/awslabs/llrt/issues/110#issuecomment-1939825912) discussion related to using it in AWS LLRT as a runtime for AWS lambdas / serverless functions.
+- 💬 [Lorenzo Sciandra - Status recap for react-native-macos](https://github.com/microsoft/react-native-macos/issues/1935#issuecomment-1935714556): TLDR: It’s alive and kicking, but a lot of work is going into keeping up with upstream. Also, it’s actively used by MS and Meta!
+- 📜 React Native on TVs: [Expo blog article](https://expo.dev/blog/how-to-build-tv-apps) and [ReactNativeTV.com](https://www.reactnativetv.com/)
+- 📜 [Expo - Broadening the scope of dev tools plugins](https://expo.dev/blog/dev-tools-plugins)
+- 📜 [expo-camera/next is ready for a close up](https://expo.dev/blog/expo-camera-next): expo-camera aims to be the simple, easy to use camera library, for advanced use cases look at react-native-vision-camera.
+- 📜 [How React Native Screens powers Expo Router?](https://blog.swmansion.com/how-react-native-screens-powers-expo-router-766480fd2d06)
+- 📜 [Extending React Native visionOS with RealityKit](https://www.oskarkwasniewski.dev/blog/react-native-visionos-realitykit-snow)
+- 📜 [Image Optimization on CI and Local](https://www.callstack.com/blog/image-optimization-on-ci-and-local)
+- 📖 [Apple will officially drop PWA support with iOS 17.4 in the EU](https://developer.apple.com/support/dma-and-apps-in-the-eu): All the more reason to build true native apps with React Native.
+- 📖 [New React Native Gesture Handler docs](https://docs.swmansion.com/react-native-gesture-handler/)
+- 🐦 [Evan Bacon: New Expo Router template for working with native context menus](https://x.com/Baconbrix/status/1759639968396333392?s=20)
+- 📦 [gluestack-ui with NativeWind - Copy and paste components into apps](https://gluestack.io/ui/with-nativewind/docs/overview/introduction): Like shadcn/ui, but for React Native.
+- 📦 [react-native-live-markdown](https://github.com/Expensify/react-native-live-markdown): Neat text input field with live markdown formatting.
+- 📦 [expo-share-extension - Create native iOS share extension with a custom view](https://github.com/MaxAst/expo-share-extension)
+- 📦 [react-native-reanimated 3.7.0](https://github.com/software-mansion/react-native-reanimated/releases/tag/3.7.0): New clamp parameter in withSpring, generator support in worklet, visionOS support.
+- 📦 [react-native-vision-camera 3.9](https://github.com/mrousavy/react-native-vision-camera/releases/tag/v3.9.0): Lots of new features, especially for Android (focus, flash, …).
+- 📦 [react-native-gesture-handler 2.15 - macOS/visionOS support, TurboModule](https://github.com/software-mansion/react-native-gesture-handler/releases/tag/2.15.0)
+- 🎥 [Theo Browne - The State of React Native 2023](https://www.youtube.com/watch?v=sJItBjarnr4)
+- 🎥 [Jamon Holmgren - Intro to MobX-State-Tree](https://www.youtube.com/watch?v=n_VjjJxyd8Q)
+- 🎥 [William Candillon - Heart Beat Animation](https://www.youtube.com/watch?v=3pVn3_Q_QfA)
+- 🎙️ [The React Native Show 35 - Multiplatform App Development With React Native](https://www.callstack.com/podcasts/multiplatform-app-development-with-react-native)
+- 🎙️ [React Native Radio 288 - Reacting to the 2023 State of React Native Results](https://reactnativeradio.com/episodes/rnr-288-survey-says-react-native-got-more-popular)
+- 🎙️ [Rocket Ship 29 - State of React Native with Áron Berezkin](https://share.transistor.fm/s/aca1a636)
+- 🎙️ [Rocket Ship 30 - Ignite React Native Projects with Frank Calise](https://share.transistor.fm/s/059aa605)
+- 📅 [Chain React 2024 tickets are now on sale - July 17–19, 2024 in Portland, OR](https://x.com/ChainReactConf/status/1758192473686622271)
+- 📅 [React Native EU rebrands to React Universe Conf - Sept 5-6, 2024 in Wrocław, Poland](https://www.reactuniverseconf.com)
 
 ---
 
